# informatique-TD_dm

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  README.md  TD2_8h.html  TD2_8h_source.html  TD3_8h.html  TD3_8h_source.html  TD5_8h.html  TD5_8h_source.html  TD6_8h.html  TD6_8h_source.html  classes.html  dir_3bf6691eb926d35f176d82b6c3278892.html  dir_4270232d181a7ba7bec43469d39e462b.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_8e47e7826fb5c8cc34e07b2e2f3da1b5.html  dir_96798700b208e2213cfdb656dce72e8f.html  dir_9c22bd78fdbba2351fabab37af0240bc.html  dir_b946b4faf670ff63f306dfef9fdbe0e5.html  dir_bfccd401955b95cf8c75461437045ac0.html  dir_da4eb9188d6e71084a7e4cbbc4760b72.html  ejovo__matrix_8h.html  ejovo__matrix_8h_source.html  ejovo__rand_8h.html  ejovo__rand_8h_source.html  files.html  globals.html  globals_func.html  globals_type.html  md_README.html  menudata.js  structmat__t-members.html  structmat__t.html  structstat.html  structxoshiro256ss__state-members.html  structxoshiro256ss__state.html
.github/workflows/: CMake.yml  Mac.yml  Ubuntu.yml
Latex/: TD2.tex  TD2_3.tex
docs/: TD2_8h.html  TD2_8h_source.html  classes.html  dir_bfccd401955b95cf8c75461437045ac0.html  globals_type.html  index.html  pages.html  structstat.html
docs/search/: all_0.js  all_1.js  all_8.js  classes_0.js  searchdata.js
html/: annotated.html  files.html  formula.repository  functions.html  functions_vars.html  globals.html  globals_func.html  md_README.html  structstat-members.html
html/search/: all_2.js  all_5.js  all_7.js  functions_2.js  functions_3.js  functions_5.js  variables_0.js
inc/: TD2.h  TD3.h  TD5.h  TD6.h
latex/: TD2_3.aux  TD2_3.fdb_latexmk  TD2_3.fls  TD2_3.tex
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  searchdata.js  typedefs_0.js  typedefs_1.js
src/: CMakeLists.txt  TD2.c  TD4_ex4.c  TD5.c  TD6.c  demo.c
src/EXAMEN/: Blockchains.c  CMakeLists.txt  README.md  ex3.c
src/TD1/: CMakeLists.txt
src/TD2/: CMakeLists.txt  ex1.c  ex2.c  ex3.c  ex4.c  ex5.c  ex6.c  ex7.c
src/TD3/: CMakeLists.txt  ex1.c  ex6.c
src/TD4/: CMakeLists.txt  ex4.c
src/TD5/: CMakeLists.txt  ex1.c
src/TD6/: CMakeLists.txt  ex1.c  ex4.c
src/ejovo/: CMakeLists.txt
test/: CMakeLists.txt  TD2.c  hello.c
